tests/ui/parser/utf16-be-without-bom.stderr
error: unknown start of token: \u{0}
  --> $DIR/utf16-be-without-bom.rs:5:1
   |
LL | ␀f␀n␀ ␀m␀a␀i␀n␀(␀)␀ ␀{␀}␀
   | ^
   |
   = help: source files must contain UTF-8 encoded text, unexpected null bytes might occur when a different encoding is used

error: unknown start of token: \u{0}
  --> $DIR/utf16-be-without-bom.rs:5:3
   |
LL | ␀f␀n␀ ␀m␀a␀i␀n␀(␀)␀ ␀{␀}␀
   |   ^
   |
   = help: source files must contain UTF-8 encoded text, unexpected null bytes might occur when a different encoding is used

error: unknown start of token: \u{0}
  --> $DIR/utf16-be-without-bom.rs:5:5
   |
LL | ␀f␀n␀ ␀m␀a␀i␀n␀(␀)␀ ␀{␀}␀
   |     ^
   |
   = help: source files must contain UTF-8 encoded text, unexpected null bytes might occur when a different encoding is used

error: unknown start of token: \u{0}
  --> $DIR/utf16-be-without-bom.rs:5:7
   |
LL | ␀f␀n␀ ␀m␀a␀i␀n␀(␀)␀ ␀{␀}␀
   |       ^
   |
   = help: source files must contain UTF-8 encoded text, unexpected null bytes might occur when a different encoding is used

error: unknown start of token: \u{0}
  --> $DIR/utf16-be-without-bom.rs:5:9
   |
LL | ␀f␀n␀ ␀m␀a␀i␀n␀(␀)␀ ␀{␀}␀
   |         ^
   |
   = help: source files must contain UTF-8 encoded text, unexpected null bytes might occur when a different encoding is used

error: unknown start of token: \u{0}
  --> $DIR/utf16-be-without-bom.rs:5:11
   |
LL | ␀f␀n␀ ␀m␀a␀i␀n␀(␀)␀ ␀{␀}␀
   |           ^
   |
   = help: source files must contain UTF-8 encoded text, unexpected null bytes might occur when a different encoding is used

error: unknown start of token: \u{0}
  --> $DIR/utf16-be-without-bom.rs:5:13
   |
LL | ␀f␀n␀ ␀m␀a␀i␀n␀(␀)␀ ␀{␀}␀
   |             ^
   |
   = help: source files must contain UTF-8 encoded text, unexpected null bytes might occur when a different encoding is used

error: unknown start of token: \u{0}
  --> $DIR/utf16-be-without-bom.rs:5:15
   |
LL | ␀f␀n␀ ␀m␀a␀i␀n␀(␀)␀ ␀{␀}␀
   |               ^
   |
   = help: source files must contain UTF-8 encoded text, unexpected null bytes might occur when a different encoding is used

error: unknown start of token: \u{0}
  --> $DIR/utf16-be-without-bom.rs:5:17
   |
LL | ␀f␀n␀ ␀m␀a␀i␀n␀(␀)␀ ␀{␀}␀
   |                 ^
   |
   = help: source files must contain UTF-8 encoded text, unexpected null bytes might occur when a different encoding is used

error: unknown start of token: \u{0}
  --> $DIR/utf16-be-without-bom.rs:5:19
   |
LL | ␀f␀n␀ ␀m␀a␀i␀n␀(␀)␀ ␀{␀}␀
   |                   ^
   |
   = help: source files must contain UTF-8 encoded text, unexpected null bytes might occur when a different encoding is used

error: unknown start of token: \u{0}
  --> $DIR/utf16-be-without-bom.rs:5:21
   |
LL | ␀f␀n␀ ␀m␀a␀i␀n␀(␀)␀ ␀{␀}␀
   |                     ^
   |
   = help: source files must contain UTF-8 encoded text, unexpected null bytes might occur when a different encoding is used

error: unknown start of token: \u{0}
  --> $DIR/utf16-be-without-bom.rs:5:23
   |
LL | ␀f␀n␀ ␀m␀a␀i␀n␀(␀)␀ ␀{␀}␀
   |                       ^
   |
   = help: source files must contain UTF-8 encoded text, unexpected null bytes might occur when a different encoding is used

error: unknown start of token: \u{0}
  --> $DIR/utf16-be-without-bom.rs:5:25
   |
LL | ␀f␀n␀ ␀m␀a␀i␀n␀(␀)␀ ␀{␀}␀
   |                         ^
   |
   = help: source files must contain UTF-8 encoded text, unexpected null bytes might occur when a different encoding is used

error: expected one of `!` or `::`, found `n`
  --> $DIR/utf16-be-without-bom.rs:5:4
   |
LL | ␀f␀n␀ ␀m␀a␀i␀n␀(␀)␀ ␀{␀}␀
   |    ^ expected one of `!` or `::`
   |
help: consider removing the space to spell keyword `fn`
   |
LL - ␀f␀n␀ ␀m␀a␀i␀n␀(␀)␀ ␀{␀}␀
LL + ␀fn␀ ␀m␀a␀i␀n␀(␀)␀ ␀{␀}␀
   |

error: aborting due to 14 previous errors

